Auto-resolve incompatible JVM configuration